<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/MainScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >

        <Button
            android:id="@+id/choose_calendars_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_calendars_button"
            android:layout_marginBottom="15dp" />

        <View style="@style/Divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp" >

                <TextView
                    android:id="@+id/set_range_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set_range"
                    android:layout_marginRight="10dp"
                    android:textSize="18sp"  />

                <Spinner
                    android:id="@+id/range_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp" >

                <TextView
                    android:id="@+id/button_switch_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_switch_text"
                    android:layout_marginRight="10dp"
                    android:textSize="18sp"
                    />

                <Switch
                    android:id="@+id/button_switch"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp" >

                <TextView
                    android:id="@+id/switch_free_labels_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/switch_free_labels_text"
                    android:layout_marginRight="10dp"
                    android:textSize="18sp"
                    />

                <Switch
                    android:id="@+id/switch_free_labels"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp" >

                <TextView
                    android:id="@+id/switch_12_hours_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/use_12_hours"
                    android:layout_marginRight="10dp"
                    android:textSize="18sp"
                    />

                <Switch
                    android:id="@+id/switch_12_hours"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp" >

                <TextView
                    android:id="@+id/switch_mirror_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mirror"
                    android:layout_marginRight="10dp"
                    android:textSize="18sp"
                    />

                <Switch
                    android:id="@+id/switch_mirror"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:checked="false"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp" >

                <TextView
                    android:id="@+id/switch_show_allday_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_allday"
                    android:layout_marginRight="10dp"
                    android:textSize="18sp"
                    />

                <Switch
                    android:id="@+id/switch_show_allday"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"/>

            </LinearLayout>

        </LinearLayout>

        <View style="@style/Divider" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/add_widget" />


    </LinearLayout>
</ScrollView>